Fix the dashboard columns on IE. One of the CSS rules wasn't updated for the datagrids. Fixes bug #349.

--- a/htdocs/css/ie_hacks.css
+++ b/htdocs/css/ie_hacks.css
@@ -65,7 +65,7 @@ table.sidebyside th.controls {
 }
 
 /* IE can't seem to do fixed height for the two columns, so force a minimum. */
-#dashboard-main .main {
+#dashboard-main .datagrid-main {
   height: 35em;
 }
 
